# voxelengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  ship.bat
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
shaders/: basic.frag  material.frag  material.vert
src/core/: base.h  engine.cpp  engine.h  renderer.cpp
src/ve/: main.cpp
src/ve/components/: camera.cpp  camera.h  transform.cpp  transform.h
src/ve/core/: base.h  engine.cpp  engine.h  entity.cpp  entity.h  errors.h  input.cpp  input.h  logging.cpp  logging.h  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.h  vertex.cpp  vertex.h  window.cpp  window.h
src/ve/game/: block.h  chunk.cpp  chunk.h  game.h  world.h
src/ve/render/: block.cpp  block.h  chunk.h  material.cpp  material.h  renderer.cpp  renderer.h  shader.cpp  shader.h  staticmesh.cpp  staticmesh.h  texture.cpp  texture.h  vertex.cpp  vertex.h
src/ve/utils/: file_handler.cpp  file_handler.h  image.cpp  image.h
ve/: CMakeLists.txt
ve/src/core/: application.h  base.h  engine.cpp  engine.h  input.cpp  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  window.cpp  window.h
